# HIPPO

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  er_diagram.sh  graph_models.py  hippo_models.dot  pyproject.toml  setup_orm.py  test_django_models
data/: tar.sh
db/: reset.sh
docs/: requirements.txt  syndirella_x_hippo.md
docs/source/: add_data.rst  (+25 more)
graveyard/: bbset.py  tag.py
hippo/: __init__.py  __main__.py  admin.py  animal.py  apps.py  apsw.py  block.py  chem.py  compound.py  cset.py  custom_models.py  database.py  db.py  feature.py  fingerprint.py  fragalysis.py  interaction.py  iset.py  legacy.py  metadata.py  models.py  pca.py  pipeline.py  plotting.py  pose.py  posebusters.py  postgres.py  price.py  prolif.py  pset.py  pycule.py  pyvis.py  quote.py  reaction.py  recipe.py  rgen.py  rset.py  scoring.py  set.py  subsite.py  (+8 more)
hippo2/: __init__.py  animal.py  bb.py  compound.py  cset.py  csetlist.py  plotting.py  pose.py  pset.py  quoting.py  reaction.py  rset.py  syndirella.py  tools.py  tset.py
hippo2_legacy/: __init__.py  animal.py  bb.py  compound.py  cset.py  csetlist.py  fingerprint.py  plotting.py  pose.py  pset.py  quoting.py  reaction.py  rset.py  scoring.py  syndirella.py  tools.py  tset.py
hippo3/: __init__.py  animal.py  compound.py  cset.py  db.py  db_test.py  feature.py  metadata.py  plotting.py  pose.py  pset.py  quote.py  reaction.py  recipe.py  tags.py  target.py  test.db  tools.py
hippo_django_orm/: abstract_set.py  animal.py  compound.py  compound_set.py  compound_table.py  database.py  expressions.py  feature.py  interaction.py  models.py  pose.py  pose_set.py  pose_table.py  quote.py  reactant.py  reaction.py  setup.py  solvent.py  subsite.py  tag.py  target.py  target_set.py  target_table.py
hippo_legacy/: __init__.py  block.py  compound.py  db.py  fingerprint.py  fragalysis.py  graphs.py  interaction.py  iset.py  pipeline.py  pset.py  quote.py  recipe.py  rset.py  scoring.py  set.py  subsite.py  tags.py  target.py  tools.py
hippo_pony/: __init__.py  animal.py  test_pony.db
scripts/: er_diagram.sh  import_legacy.py
tests/: config.py  test_00_cleanup.py  test_01_fragalysis_download.py  test_02_setup_animal.py  test_03_add_hits.py  test_04_interactions.py  test_05_scaffolds.py  test_06_subsites.py  test_A71EV2A.py  test_CHIKV_Mac.py  test_compound.py  test_feature.py  test_interaction.py  test_longcode.py  test_pose.py  test_radical.py  test_recipe1.py  test_recipe2.py  test_subsite.py  test_target.py  test_web.py
tests_django_orm/: test_django_models.py  test_legacy_data.py
web/: asgi.py  forms.py  rendertypes.py  settings.py  urls.py  views.py  wsgi.py
(+206 files in other folders)
