[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "hippo-db"
version = "0.3.38"
authors = [
    { name = "Max Winokan", email = "max@winokan.com" },
]
description = "Hit Interaction Profiling and Procurement Optimisation"
readme = "README.md"
requires-python = ">=3.10"
requires = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdkit >= 2024.9.6",
    "molparse >= 0.0.41",
    "mpytools >= 0.0.21",
    "tqdm",
    "jupyterlab",
    "pycule",
    "chardet",
    "pandas",
    "yattag",
    "hirsch",
    "hippo_plot",
    "scikit-learn",
    "openpyxl",
    "ipywidgets",
    "networkx",
    "openmm",
    "apsw",
    "python-louvain",
]
[project.urls]
"Homepage" = "https://hippo.winokan.com"
"Bug Tracker" = "https://github.com/mwinokan/HIPPO/issues"
[tool.hatch.build]
include = [
    "hippo/*.py",
]
